<resources>
    <string name="app_name">KFD Order</string>
    <string name="connection_string">/api/v1/</string>
    <string name="developed_by_rashmi">Developed by Datamation.</string>
    <string name="txt_msg">Your Network is Unavailable.Check Your data or Wi-Fi Connection.</string>
    <string name="title_activity_home">Home : Assistance 77-2618584 Ver:3.0.13 </string>
    <string name="title_home">Home</string>
    <string name="title_sa">Place Order</string>
    <string name="title_download_upload">Sync</string>
    <string name="title_tools">Help</string>
    <string name="title_logout">Logout</string>
    <string name="login_et_password_hint">P A S S W O R D</string>
    <string name="login_et_username_hint">U S E R N A M E</string>
    <string name="login_et_customerID_hint">C U S T O M E R    I D</string>
    <string name="login_btn_sign_in_txt">LOGIN</string>
    <!--  Num Value -->
    <string name="newCusVal">NEWCUS</string>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->


    <array name="listView_icons_for_settingd">
        <item>@drawable/sync</item>
        <item>@drawable/printer</item>
        <item>@drawable/reschedule</item>
        <item>@drawable/database</item>
        <item>@drawable/salesreps</item>
        <item>@drawable/route</item>
    </array>

    <!-- Content Description -->

    <!-- Print Preview Descrption -->
    <string name="compulsory">Compulsory</string>
    <!-- Print Preview Descrption -->


    <!-- Print Preview Loading Descrption -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageview_no_image_string">NO IMAGE AVAILABLE</string>
    <!-- Print Preview Van Sale Invoice -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="DATABASE_NAME">kfdsfa_database.db</string>
</resources>
