<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:visible="true"/>

    <item
        android:id="@+id/navigation_sales"
        android:icon="@drawable/ic_receipt_black_24dp"
        app:showAsAction="withText"
        android:title="@string/title_sa"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_downloads"
        android:icon="@drawable/sync"
        app:showAsAction="withText"
        android:title="@string/title_download_upload"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_tools"
        android:icon="@drawable/help"
        android:title="@string/title_tools"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/title_logout" />


</menu>
